--- a/src/Styles/LogInForm.css
+++ b/src/Styles/LogInForm.css
@@ -1,8 +1,7 @@
 @media screen and (min-width: 300px) {
     
-
-    #landing-page-form {
-        text-align: center;
+    #login-form-main {
+       
         border: 1px solid black;
         border-radius: 1em;
         margin-bottom: 1em;
@@ -11,21 +10,23 @@
         background-color: white;
         color: black;
         max-width: 90%;
-        padding-left: 1em;
-        padding-right: 1em;
         margin-left: auto;
         margin-right: auto;
       }
 
-    #landing-login-btn {
-      padding: .7em;
-     border-radius: 5px;
-     font-size: 1em;
-    }
+      .login-form {
+        text-align: left;
+        padding-left: 25%;
+        line-height: 2.5em;
 
-    #landing-login-btn:hover {
-      cursor: pointer;
-      color: red;
-    }
+      }
+
+      .user-label {
+        padding-right: .8em
+      }
+
+      .password-label {
+        padding-right: 1.5em;
+      }
   
 }
