--- a/src/Styles/CareerList.css
+++ b/src/Styles/CareerList.css
@@ -17,6 +17,7 @@
         padding-right: 1em;
         margin-left: auto;
         margin-right: auto;
+        font-size: .8em;
       }
 
       #career-display-form {
@@ -33,4 +34,14 @@
           color: red;
       }
   
+}
+
+@media screen and (min-width:1100px){
+
+    #career-display {
+        max-width: 65%;
+        font-size: 1em;
+    }
+
+
 }
