--- a/src/Styles/Delete.css
+++ b/src/Styles/Delete.css
@@ -32,6 +32,11 @@
     #delete-employee-btn:hover {
         cursor: pointer;
         color: orange;
+        content: 'CAN YOU SEE THIS';
+    }
+
+    #delete-employee-btn:hover::after {
+        content: ' Are you absolutely sure?'
     }
 
     #delete-search-input {
@@ -46,12 +51,37 @@
     #delete-return-main {
         padding: .5em;
         border-radius: 5px;
-        margin-left: 3em;
+        margin-left: 1em;
+        margin-top: 1em;
     }
 
     #delete-return-main:hover {
         cursor: pointer;
         color: red;
     }
+
+}
+
+@media screen and (min-width:700px){
+
+    #delete-search-fields {
+        width: 70%;
+    }
+
+    #delete-return-main {
+        margin-left: 2em;
+    }
+
+
+}
+
+@media screen and (min-width:1100px){
+
+    #delete-search-fields {
+        max-width: 60%;
+        font-size: 1.2em;
+    }
+
+
 
 }
