--- a/src/Styles/EmployeeList.css
+++ b/src/Styles/EmployeeList.css
@@ -15,7 +15,7 @@
     
      padding: .5em;
      margin-top: 2em;
-     margin-left: 2em;
+     margin-left: .45em;
      margin-bottom: 2em;
      border-radius: 5px;
      
@@ -43,16 +43,43 @@
 
 
     .employee-component {
-    text-align: left;
-    padding-left: 30%;
+    text-align: center;
+    padding-left: 4%;
+    padding-right: 4%;
     border: 1px solid black;
     margin-bottom: 1em;
     border-radius: 1em;
     background-color: white;
-    width: 90%;
+    max-width: 90%;
     margin-left: auto;
     margin-right: auto;
     }
 
   
 } 
+
+@media screen and (min-width: 700px) {
+
+  .employee-component {
+    max-width: 65%;
+    padding-left: 10%;
+    padding-right: 10%;
+  }
+
+
+
+
+}
+
+@media screen and (min-width:1100px){
+
+  .employee-component {
+    padding-left: 10%;
+    padding-right: 10%;
+    max-width: 60%;
+    font-size: 1.2em;
+    }
+
+
+
+}
