--- a/src/Styles/LandingPage.css
+++ b/src/Styles/LandingPage.css
@@ -15,6 +15,7 @@
         padding-right: 1em;
         margin-left: auto;
         margin-right: auto;
+        font-size: .9em;
       }
 
     #landing-login-btn {
@@ -28,4 +29,15 @@
       color: red;
     }
   
+}
+
+@media screen and (min-width:1100px){
+
+#landing-page-form {
+
+  font-size: 1.1em;
+
+}
+
+
 }
