--- a/src/Styles/LogInForm.css
+++ b/src/Styles/LogInForm.css
@@ -16,7 +16,7 @@
 
       .login-form {
         text-align: left;
-        padding-left: 25%;
+        padding-left: 20%;
         line-height: 2.5em;
 
       }
@@ -29,4 +29,30 @@
         padding-right: 1.5em;
       }
   
+}
+
+@media screen and (min-width:700px) {
+
+  #login-form-main {
+    max-width: 70%;
+  }
+
+
+}
+
+@media screen and (min-width:1100px){
+
+  #login-form-main {
+
+    font-size: 1.3em;
+
+  }
+
+  .login-form {
+ 
+    padding-left: 30%;
+   
+
+  }
+
 }
