--- a/src/Styles/Main.css
+++ b/src/Styles/Main.css
@@ -48,11 +48,30 @@
         border-radius: 1em;
         color: black;
         background-color: white;
-        width: 90%;
+        max-width: 90%;
         margin-left: auto;
         margin-right: auto;
+        font-size: .8em;
         }
       
     
   
+}
+
+@media screen and (min-width:1100px){
+
+    #main-page-format {
+
+        font-size: 1em;
+        max-width: 70%;
+
+    }
+
+    .route-btn {
+
+        font-size: .9em;
+
+    }
+
+
 }
