--- a/src/Styles/UpdateEmployee.css
+++ b/src/Styles/UpdateEmployee.css
@@ -1,6 +1,9 @@
+@media screen and (min-width:300px){
 
 #update-employee-form {
-    text-align: left;
+    
+    display: flex;
+    justify-content: center;
         border: 1px solid black;
         border-radius: 1em;
         margin-bottom: 1em;
@@ -13,6 +16,7 @@
         padding-right: 1em;
         margin-left: auto;
         margin-right: auto;
+        font-size: 1em;
 }
 
 #update-title {
@@ -21,28 +25,28 @@
 
 #update-employee-fields input {
 
-    margin-left: 10em;
+    margin-left: 7.5em;
     margin-bottom: 1em;
-    padding-left: .3em;
+    max-width: 10em;
 
 }
 #update-employee-fields label {
 
     position: absolute;
-    margin-left: 1em;
+    margin-left: .5em;
     
 
 }
 
 #update-employee-fields select {
 
-    margin-left: 10em;
+    margin-left: 7.5em;
     margin-bottom: .5em;
 }
 
 #return-to-main {
 
-    margin-left: 8.33em;
+    margin-left: 20%;
     margin-top: 1em;
 
 }
@@ -68,4 +72,75 @@
 
 #update-btn:hover {
     cursor: pointer;
+    }
+}
+
+@media screen and (min-width:700px){
+
+    #update-employee-form {
+       max-width: 70%;
+    }
+
+    #update-employee-fields label {
+        margin-left: 3em;
+    }
+
+    #update-employee-fields input {
+
+        margin-left: 14em;
+        max-width: 14em;
+          
+    
+    }
+
+    #update-employee-fields select {
+    
+        margin-left: 14em;
+   
+
+    }
+
+    #return-to-main {
+
+        margin-left: 30%;
+            
+    }
+
+
+
+}
+
+@media screen and (min-width:1100px){
+
+    #update-employee-form {
+
+        font-size: 1.2em;
+        max-width: 60%;
+
+
+    }
+
+    #update-employee-fields label {
+        margin-left: 2em;
+    }
+
+    #update-employee-fields input {
+
+        margin-left: 12em;
+        max-width: 14em;
+          
+    
+    }
+
+    #update-employee-fields select {
+    
+        margin-left: 12em;
+   
+
+    }
+
+   
+
+
+
 }
