--- a/src/Styles/UpdateSearch.css
+++ b/src/Styles/UpdateSearch.css
@@ -52,7 +52,8 @@
     #update-return-main {
         padding: .5em;
         border-radius: 5px;
-        margin-left: 3em;
+        margin-left: 1em;
+        margin-top: 1em;
     }
 
     #update-return-main:hover{
@@ -60,6 +61,31 @@
         color: red;
     }
 
+
+
+}
+
+@media screen and (min-width:700px){
+
+    #update-search-fields {
+       max-width: 70%;
+    }
+
+    #update-return-main {
+        
+    margin-left: 2em;
+
+    }
+}
+
+@media screen and (min-width:1100px){
+
+    #update-search-fields {
+        max-width: 60%;
+        font-size: 1.2em;
+    }
+
+    
 
 
 }
