--- a/src/Styles/UpdateSuccess.css
+++ b/src/Styles/UpdateSuccess.css
@@ -1,13 +1,38 @@
-/* @media screen and (min-width: 300px) {
+@media screen and (min-width: 300px) {
   
-    main {
-    border: 1px solid black;
-    margin-bottom: 1em;
-    border-radius: 1em;
-    background-color: black;
-    width: 90%;
-    margin-left: auto;
-    margin-right: auto;
+    #update-success-main {
+        border: 1px solid black;
+        border-radius: 1em;
+        background-color:white;
+        width: 90%;
+        margin-top: 10em;
+        margin-left: auto;
+        margin-right: auto;
+        font-size: .7em;
+
+    }
+
+    #update-success-info {
+        text-align: center;
+        padding: 4em;
+    }
+
+    #update-return-main-btn {
+    padding: .5em;
+     border-radius: 5px;
+    }
+
+    #update-main-btn:hover {
+        cursor: pointer;
+        color: red;
     }
   
-} */
+}
+
+
+@media screen and (min-width:1100px){
+    #update-success-main {
+        max-width: 70%;
+        font-size: 1em;
+    }
+}
